input file, structs, config..